--- a/CompaniesApi/appsettings.json
+++ b/CompaniesApi/appsettings.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-RHVTGR3\\SQLEXPRESS;Database=CompanyDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-RHVTGR3\\SQLEXPRESS;Database=CompanyDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Db3Connection": "Server=DESKTOP-RHVTGR3\\SQLEXPRESS;Database=CustomerDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Db2Connection": "Server=DESKTOP-RHVTGR3\\SQLEXPRESS;Database=OrderDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Db4Connection": "Server=DESKTOP-RHVTGR3\\SQLEXPRESS;Database=PaymentDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 
 }
